--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sistema de registro de juegos</title>
 </head>
 <body>
-    
+    <hi>Correo: prueba@prueba.com</hi>
+        <p>Estudiante</p>
 </body>
 </html>
